--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,8 +4,8 @@ $warning-color: #fcc419;
 $danger-color: #ff6b6b;
 $info-color: #868e96; // #22b8cf
 
-$body-color: #E9EEF3;  // f5f5f9
-$sidebar-color: #F8F9FB;
-$navbar-color: #F8F9FB;
+$body-bg: #E9EEF3;  // f5f5f9
+$sidebar-bg: #F8F9FB;
+$navbar-bg: #F8F9FB;
 
 $font-family: system-ui, -apple-system,"Segoe UI", Helvetica, Arial, sans-serif
